kubernetes/overlays/drax/recreate-strategy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  strategy:
    type: Recreate
    rollingUpdate: null
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  strategy:
    type: Recreate
    rollingUpdate: null
