kubernetes/overlays/drax/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookstore-route
spec:
  hostnames:
    - bookstore-drax.lab.worker-node.com
